working on introduction section: Centered text and adjusted things for mobile and desktop

--- a/src/components/Introduction.css
+++ b/src/components/Introduction.css
@@ -1,9 +1,11 @@
 .slide {
+    display: flex;
     width: 100%;
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom center;
+    align-items: center;
 }
 
 .fadeOut {
