--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
     transition: 0.5s;
 }
 
+.pad-sides {
+    padding: 0 1em;
+}
+
 @media screen and (min-width: 768px) {
     #app {
         width: calc(100% - 300px);
