added small styling to end timeline bar on the left of experience

--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -87,7 +87,7 @@
     background: #2fa499;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-noXxne {
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-none {
     background: #fff;
     width: 20px;
     height: 20px;
