first workaround to pressing buttons causing scroll to

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -2,6 +2,20 @@
     text-align: center;
 }
 
+.linkButton {
+    background-color: transparent;
+    border-style: none;
+    border-color: transparent;
+    border-image: none;
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 1px;
+}
+
+.linkButton:focus {
+    outline: 0;
+}
+
 #sidebar {
     padding-top: 4em;
     padding-bottom: 40px;
@@ -95,7 +109,7 @@
     letter-spacing: 1px;
 }
 
-#sidebar-menu ul li a {
+#sidebar-menu ul li button {
     color: rgba(0, 0, 0, 0.7);
     text-decoration: none;
     position: relative;
@@ -106,7 +120,7 @@
     transition: 0.3s;
 }
 
-#sidebar-menu ul li a:after {
+#sidebar-menu ul li button:after {
     content: "";
     position: absolute;
     height: 1px;
@@ -127,12 +141,12 @@
     transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-#sidebar-menu ul li a:hover {
+#sidebar-menu ul li button:hover {
     text-decoration: none;
     color: black;
 }
 
-#sidebar-menu ul li a:hover:after {
+#sidebar-menu ul li button:hover:after {
     visibility: visible;
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
@@ -141,11 +155,11 @@
     transform: scaleX(1);
 }
 
-#sidebar-menu ul li.active a {
+#sidebar-menu ul li.active button {
     color: #2c98f0;
 }
 
-#sidebar-menu ul li.active a:after {
+#sidebar-menu ul li.active button:after {
     visibility: visible;
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
