--- a/src/components/about.css
+++ b/src/components/about.css
@@ -42,6 +42,7 @@
     border-bottom: 2px solid #2c98f0;
     position: relative;
     z-index: 0;
+    height: 400px;
 }
 
 .services .icon {
@@ -180,5 +181,6 @@
 
     .services {
         margin-bottom: 4em;
+        height: 350px;
     }
 }
