Changed font of about Panels

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -92,6 +92,7 @@
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
+    font-family: "Playfair";
 }
 
 .services.color-2 {
