Updated introduction info and a small css change to text

--- a/src/components/Introduction.css
+++ b/src/components/Introduction.css
@@ -77,11 +77,11 @@
     }
 
     #slide1-text {
-        color: black;
+        color: white;
     }
 
     #slide1-button {
-        border: 1px solid black;
-        color: black;
+        border: 1px solid white;
+        color: white;
     }
 }
