--- a/src/components/about.css
+++ b/src/components/about.css
@@ -30,9 +30,13 @@
     position: relative;
 }
 
+.services-box {
+    margin-top: 30px;
+    height: auto;
+}
 
 .services {
-    margin-bottom: 80px;
+    margin-bottom: 20px;
     padding: 1.5em;
     -webkit-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
     -moz-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
@@ -42,7 +46,8 @@
     border-bottom: 2px solid #2c98f0;
     position: relative;
     z-index: 0;
-    height: 400px;
+    height: 100%;
+    margin-top: 20px;
 }
 
 .services .icon {
@@ -182,6 +187,10 @@
 
     .services {
         margin-bottom: 4em;
-        height: 350px;
+    }
+
+    .services-box {
+        margin-top: 0px;
+        height: 100%;
     }
 }
