--- a/src/components/Introduction.css
+++ b/src/components/Introduction.css
@@ -20,6 +20,31 @@
     margin-left: 0px;
 }
 
+.slide-swap-button {
+    position: absolute;
+    background-color: #e0e0e0;
+    bottom: 2%;
+    right: 2%;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    opacity: 80%;
+}
+
+.slide-swap-button:active {
+    background-color: grey;
+    opacity: 100%;
+}
+
+.arrow-right {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
 #introduction {
     width: 100%;
     height: 100vh;
@@ -38,15 +63,10 @@
     font-weight: bold;
 }
 
-.button:hover {
+.button:hover, .button:active, .button:focus {
     background: 0;
-    color: black;
-    border: 1px solid black;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    padding: 10px 15px;
-    font-weight: 400;
+    color: #f2f3f7;
+    border: 1px solid #f2f3f7;
 }
 
 .slide1-text {
@@ -66,11 +86,24 @@
         width: fit-content;
     }
 
+    .button:active {
+        width: fit-content;
+    }
+
+    .button:focus {
+        width: fit-content;
+    }
+
     #slide1-text {
         color: white;
     }
 
     #second-button {
         margin-left: 5px;
+    }
+
+
+    .slide-swap-button {
+        bottom: 48%;
     }
 }
