--- a/src/components/about.css
+++ b/src/components/about.css
@@ -6,25 +6,25 @@
     display: block;
 }
 
-.heading-meta {
-    margin-bottom: 15px;
-    display: block;
-    font-size: 10px;
-    text-transform: uppercase;
-    color: #999999;
-    font-weight: 500;
-    letter-spacing: 5px;
-}
+/*.heading-meta {*/
+/*    margin-bottom: 15px;*/
+/*    display: block;*/
+/*    font-size: 10px;*/
+/*    text-transform: uppercase;*/
+/*    color: #999999;*/
+/*    font-weight: 500;*/
+/*    letter-spacing: 5px;*/
+/*}*/
 
-.heading {
-    font-size: 18px;
-    margin-bottom: 1.5em;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    line-height: 1.8;
-    position: relative;
-}
+/*.heading {*/
+/*    font-size: 18px;*/
+/*    margin-bottom: 1.5em;*/
+/*    font-weight: 700;*/
+/*    text-transform: uppercase;*/
+/*    letter-spacing: 5px;*/
+/*    line-height: 1.8;*/
+/*    position: relative;*/
+/*}*/
 
 .services-box {
     margin-top: 30px;
